samples/_failures_safe/1761695563_c39794_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b69e5f94.c: In function ‘main’:
./samples/SAFE/__tmp_b69e5f94.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_b69e5f94.c:173:5: error: expected declaration or statement at end of input
